change to cmake with msvc in vscode

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,13 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
 # Visual Studio
 build/
 .vs/
 **.vcxproj.filters
 **.vcxproj.user
+
+# Visual Stdio Code
+.vscode/
+
+# Mirai
+Mirai-loader/config.json
+Mirai-loader/device.json
+Mirai-loader/cache/
